--- a/css/addfunds.css
+++ b/css/addfunds.css
@@ -728,6 +728,7 @@
   }
   .addfunds .image-13-y0eQTV {
     margin-left: 11%;
+    margin-top: 12%;
   }
 }
 
@@ -784,6 +785,9 @@
   .addfunds .image-13-y0eQTV {
     margin-left: 12%;
     width: 34%;
+  }
+  .addfunds .manual-payments-nto-your-wallet-aewt80 {
+    line-height: 23px;
   }
 }
 
