--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -31,9 +31,9 @@
 .forgot-password .everything-you-se-our-services-4eduM0 {
   background-color: transparent;
   height: auto;
-  left: 9%;
+  left: 10%;
   letter-spacing: 0.00px;
-  line-height: 32px;
+  line-height: 53px;
   position: absolute;
   text-align: left;
   top: 253px;
@@ -51,6 +51,7 @@
   justify-content: flex-start;
   position: relative;
   width: 100%;
+  margin-top: -2%;
     
 }
 .forgot-password .forgot-password-4eduM0 {
@@ -71,7 +72,7 @@
 }
 .forgot-password .grey-back-4eduM0 {
   background-color: rgba(238,238,238,1.0);
-  height: 80%;
+  height: 106%;
   position: absolute;
   top: 53px;
   width: 100%;
@@ -86,11 +87,11 @@
   height: auto;
   justify-content: flex-start;
   margin-bottom: 204.0px;
-  margin-left: 12%;
+  margin-left: 14%;
   margin-right: 2%;
   margin-top: 158px;
   position: relative;
-  width: 37%;
+  width: 35%;
 }
 .forgot-password .image-6-RH0WJ5 {
   align-self: flex-end;
@@ -123,17 +124,18 @@
   background-color: transparent;
   color: rgba(9,6,1,1.0);
   font-family: 'OswaldRegular-Regular', Helvetica;
-  font-size: 19px;
+  font-size: 23px;
   font-style: normal;
   font-weight: bolder;
   height: auto;
-  margin-left: 35%;
+  margin-left: 45%;
   letter-spacing: 0.00px;
   line-height: 30px;
   position: absolute;
   text-align: left;
   white-space: nowrap;
   width: auto;
+  margin-top: 14%;
 }
 .forgot-password .line-1-4eduM0 {
   background-color: transparent;
@@ -141,7 +143,7 @@
   margin-left: 2%;
   object-fit: cover;
   position: absolute;
-  top: 104px;
+  top: 107px;
   width: 95%;
 }
 .forgot-password .line-3-RH0WJ5 {
@@ -159,8 +161,8 @@
   margin-left: 4%;
   object-fit: cover;
   position: relative;
-  top: 42px;
   width: 94%;
+  margin-top: 13%
 }
 .forgot-password .overlap-group-C61RwL {
   background-color: transparent;
@@ -213,7 +215,7 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'SegoeUI-Regular', Helvetica;
-  font-size: 25px;
+  font-size: 37.5px;
   font-style: normal;
   font-weight: 400;
   height: auto;
@@ -277,39 +279,32 @@
 
 @media (min-width: 2000px) {
   .forgot-password .swaps-fx-user-guide-4eduM0 {
-    font-size: 31px;
+    font-size: 46.5px;
   }
   .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 90px;
-    line-height: 104px;
+    font-size: 150px;
+    line-height: 143px;
     top: 239px;
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
-    top: 441px;
-    width: 538px;
-    font-size: 34px !important;
+    top: 540px;
+    width: 612px;
+    font-size: 51px !important;
   }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
-    font-size: 36px !important;
-    margin-left: 36% !important;
-    margin-top: 12px !important;
+    font-size: 39px !important;
+    margin-left: 45% !important;
+    margin-top: 10% !important;
   }
-  .forgot-password .line-8-C61RwL {
-    top: 54px !important;
-  }
- 
   .forgot-password .overlap-group1-C61RwL {
     height: 2000px;
-  }
-  .forgot-password .grey-back-4eduM0 {
-    height: 85%;
   }
   .forgot-password .swapslogoimage-transparent-4eduM0 {
     margin-top: -22%;
   }
   .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
     top: -553px !important;
-    font-size: 24px !important;
+    font-size: 29px !important;
   }
   .forgot-password .line-3-RH0WJ5 {
     position: relative;
@@ -333,20 +328,20 @@
 
 @media (max-width: 2000px) {
   .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 70px;
-    line-height: 78px;
+    font-size: 105px;
+    line-height: 96px;
     top: 190px;
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
-    top: 345px;
+    top: 382px;
     width: 581px;
-    font-size: 31px !important;
-  }
-  .forgot-password .grey-back-4eduM0 {
-    height: 83%;
+    font-size: 46.5px !important;
   }
   .forgot-password .swapslogoimage-transparent-4eduM0 {
     margin-top: -18%;
+  }
+  .forgot-password .forgot-password-4eduM0 {
+    top: 137%;
   }
   .forgot-password .line-3-RH0WJ5 {
     height: 41%;
@@ -360,44 +355,66 @@
   .forgot-password .polygon-1-RH0WJ5 {
     margin-top: 6%;
   }
+  
+  .forgot-password .line-8-C61RwL {
+    margin-top: 15%;
+  }
+ 
 }
 
 @media (max-width: 1500px) {
   .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 51px;
-    line-height: 60px;
+    font-size: 80px;
+    line-height: 71px;
     top: 190px;
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
-    top: 309px;
-    font-size: 30px !important;
+    top: 338px;
+    font-size: 45px !important;
     width: 500px;
   }
   .forgot-password .forgot-password-4eduM0 {
-    font-size: 39px;
+    font-size: 58.5px;
+    top: 137%;
+  }
+  .forgot-password .line-8-C61RwL {
+    margin-top: 17%;
+  }
+  .forgot-password .flex-row-C61RwL {
+    margin-top: -6%;
+  }
+  .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+    top: -383px;
+    font-size: 18px;
   }
 }
 
 @media (min-width: 1500px) {
-  .forgot-password .forgot-password-4eduM0 {
-    font-size: 66px !important;
+  .forgot-password .line-1-4eduM0 {
+    top: 110px;
   }
-  .forgot-password .line-8-C61RwL {
-    top: 57px;
-    font-size: 44px;
+  .forgot-password .forgot-password-4eduM0 {
+    font-size: 99px !important;
+    top: 129%;
   }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
-    font-size: 24px;
-    margin-left: 42%;
-    margin-top: 10px;
+    font-size: 22px;
+    margin-left: 58%;
+    margin-top: 12%;
   }
   
   .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
-    font-size: 21px;
+    font-size: 23px;
+  }
+  .forgot-password .grey-back-4eduM0 {
+    height: 104%;
   }
 }
 
 @media (max-width: 1200px) {
+  .forgot-password .grey-back-4eduM0 {
+    height: 91%;
+  }
  
   .addfunds .line-1-y1HRxC {
     width: 50%;
@@ -408,35 +425,48 @@
     margin-top: -16%;
   }
   .forgot-password .swaps-fx-user-guide-4eduM0 {
-    font-size: 20px;
+    font-size: 30px;
     top: 57px;
+  }
+  .forgot-password .forgot-password-4eduM0 {
+    font-size: 58.5px;
+    top: 119%;
+  }
+  .forgot-password .line-8-C61RwL {
+    margin-top: 15%;
   }
   .forgot-password .line-1-4eduM0 {
     top: 85px;
   }
   .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 44px;
-    line-height: 48px;
+    font-size: 65px;
+    line-height: 61px;
     top: 155px;
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
-    top: 253px;
-    font-size: 24px !important;
-    width: 384px;
-    line-height: 32px;
+    top: 278px;
+    font-size: 42px !important;
+    width: 500px;
+    line-height: 37px;
   }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
-    font-size: 15px;
-    margin-left: 42%;
-    margin-top: 5px;
+    font-size: 14px;
+    margin-left: 56%;
+    margin-top: 10%;
   }
 
 .forgot-password .image-6-RH0WJ5 {
   margin-left: 17%;
 }
+.forgot-password .image-5-dXBp89 {
+  margin-left: 35%;
+  width: 35%;
+}
 .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
-  top: -416px;
-  font-size: 12px;
+  top: -398px;
+  font-size: 24px;
+  white-space: normal;
+  width: 44%;
 }
 .forgot-password .line-3-RH0WJ5 {
   top: -14%;
@@ -455,51 +485,41 @@
 
 
 @media (max-width: 900px) { 
-  .forgot-password .grey-back-4eduM0  {
-    height: 75%;
+  .forgot-password .grey-back-4eduM0 {
+    height: 125%;
   }
-  .forgot-password .swapslogoimage-transparent-4eduM0 {
-    margin-left: 6%;
-    width: 138%;
-    margin-top: -12%;
+  .forgot-password .forgot-password-4eduM0 {
+    font-size: 37.5px;
+    margin-top: 15%;
   }
-  .forgot-password .swaps-fx-user-guide-4eduM0 {
-    font-size: 20px;
-    top: 57px;
-}
-.forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-  font-size: 26px;
-  line-height: 30px;
-  top: 125px;
-  left: 11%;
+  .forgot-password .line-8-C61RwL {
+    margin-top: 29%;
+  }
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 46px;
+    line-height: 51px;
+    top: 155px;
+  }
+.forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+  margin-left: 54%;
+  font-size: 10px;
+  margin-top: 24%;
 }
 .forgot-password .everything-you-se-our-services-4eduM0 {
-  top: 187px;
-  font-size: 16px !important;
-  width: 247px;
-  line-height: 19px;
-  left: 11%;
-}
-.forgot-password .forgot-password-4eduM0 {
-  font-size: 28px;
-}
-.forgot-password .line-8-C61RwL {
-  top: 37px;
-}
-.forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
-  margin-left: 41%;
-  font-size: 14px;
+  top: 256px;
+  font-size: 31px !important;
+  width: 378px;
+  line-height: 34px;
 }
 .forgot-password .image-5-dXBp89 {
   margin-top: 15%;
-  margin-left: 10%;
 }
 .forgot-password .image-6-RH0WJ5 {
   margin-left: 12%;
 }
 .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
-  top: -327px;
-  font-size: 9px;
+  top: -254px;
+  font-size: 16px;
 }
 .forgot-password .line-3-RH0WJ5 {
   height: 167px;
@@ -523,43 +543,43 @@
 @media (max-width: 600px) {
   .forgot-password .grey-back-4eduM0 {
     top: 23px;
-    height: 85%;
+    height: 129%;
   }
   .forgot-password .swapslogoimage-transparent-4eduM0 {
-    margin-left: 6%;
-    width: 140%;
+    margin-left: 29%;
+    width: 104%;
     margin-top: -11%;
   }
   .forgot-password .swaps-fx-user-guide-4eduM0 {
-    font-size: 15px;
+    font-size: 22.5px;
     top: 48px;
   }
   .forgot-password .line-1-4eduM0 {
-    top: 70px;
+    top: 74px;
   }
   .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 20px;
-    line-height: 22px;
-    top: 125px;
+    font-size: 32px;
+    line-height: 31px;
+    top: 109px;
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
     top: 169px;
-    font-size: 12px !important;
-    width: 187px;
-    line-height: 18px;
+    font-size: 19px !important;
+    width: 205px;
+    line-height: 20px;
   }
   .forgot-password .forgot-password-4eduM0 {
-    font-size: 17px;
-    margin-top: 0px;
+    font-size: 25.5px;
+    margin-top: 11%;
   }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
-      margin-top: 4px;
-      font-size: 7px;
-      margin-left: 227px;
+      margin-top: 19%;
+      font-size: 6px;
+      margin-left: 57%;
   
   }
   .forgot-password .line-8-C61RwL {
-    margin-top: -11px;
+    margin-top: 26%;
   }
   .forgot-password .image-5-dXBp89 {
     background-color: transparent;
@@ -578,7 +598,7 @@
   }
   .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
     top: 161px;
-    font-size: 6px;
+    font-size: 11px;
   }
   .forgot-password .line-3-RH0WJ5 {
     height: 100px;
@@ -605,42 +625,43 @@
 @media (max-width: 400px) {
   .forgot-password .grey-back-4eduM0 {
     top: 23px;
-    height: 104%;
+    height: 147%;
   }
   .forgot-password .swapslogoimage-transparent-4eduM0 {
     margin-top: -6%;
     width: 1;
   }
   .forgot-password .swaps-fx-user-guide-4eduM0 {
-    font-size: 12px;
+    font-size: 18px;
     top: 48px;
   }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
-    margin-top: 55px;
+    margin-top: 32%;
     font-size: 5px;
-    margin-left: 174px;
+    margin-left: 54%;
   }
   
   .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 17px;
-    line-height: 21px;
-    top: 134px;
+    font-size: 25.5px;
+    line-height: 26px;
+    top: 116px;
   }
 
   .forgot-password .line-1-4eduM0 {
-    top: 69px;
+    top: 72px;
   }
   .forgot-password .everything-you-se-our-services-4eduM0 {
-    top: 177px;
-    font-size: 11px !important;
+    top: 169px;
+    font-size: 16.5px !important;
     width: 153px;
     line-height: 14px;
   }
   .forgot-password .forgot-password-4eduM0 {
-    margin-top: 50px;
+    margin-top: 22%;
+    font-size: 18.5px;
   }
   .forgot-password .line-8-C61RwL {
-    margin-top: 40px;
+    margin-top: 39%;
   }
   .forgot-password .image-6-RH0WJ5 {
     margin-top: 110%;
@@ -651,7 +672,7 @@
   }
   .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
     top: 117px;
-    font-size: 3px;
+    font-size: 9px;
   }
   .forgot-password .line-3-RH0WJ5 {
     height: 100px;
@@ -671,33 +692,20 @@
 
 @media (max-width: 300px) {
   .forgot-password .grey-back-4eduM0 {
-    height: 123%;
-  }
-  .forgot-password .swapslogoimage-transparent-4eduM0 {
-    margin-top: -7%;
+    height: 144%;
   }
   .forgot-password .swaps-fx-user-guide-4eduM0 {
-    font-size: 10px;
+    font-size: 15px;
     top: 42px;
   }
   .forgot-password .line-1-4eduM0 {
-    top: 59px;
-  }
-  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .forgot-password .everything-you-se-our-services-4eduM0 {
-    top: 133px;
-    font-size: 9px !important;
-    width: 159px;
+    top: 63px;
   }
   .forgot-password .forgot-password-4eduM0 {
-   font-size: 14px;
-   margin-top: 63px;
+   top: 89%;
   }
   .forgot-password .line-8-C61RwL {
-    margin-top: 52px;
+    margin-top: 79px;
   }
   .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
     margin-top: 66px;
