--- a/css/addfunds.css
+++ b/css/addfunds.css
@@ -1269,6 +1269,14 @@
 .addfunds .adding-funds-to-ounts-made-easy-0PZcXW {
   font-size: 17px !important;
 }
+.addfunds .letters2 {
+  margin-top: -29%;
+  top: 0px;
+}
+.addfunds .image-14-y0eQTV {
+  margin-top: 14%;
+  top: 0px;
+}
   
 }
 
