--- a/css/myaccount.css
+++ b/css/myaccount.css
@@ -13,6 +13,11 @@
   position: relative;
   width: 100%;
 }
+.container-center-horizontal {
+  justify-content: center;
+  width: 100%;
+  height: 2000px;
+}
 .myaccount .black-top-rectangle-4eduM0 {
   background-color: rgba(4,27,45,1.0);
   height: 37px;
@@ -60,18 +65,18 @@
 .myaccount .everything-you-se-our-services-4eduM0 {
   background-color: transparent;
   height: auto;
-  left: 9%;
+  left: 10%;
   letter-spacing: 0.00px;
-  line-height: 42px;
+  line-height: 53px;
   position: absolute;
   text-align: left;
-  top: 476px;
+  top: 253px;
   width: 600px;
-  font-size: 40px !important;
+  font-size: 26px !important;
 }
 .myaccount .grey-back-4eduM0 {
   background-color: rgba(238,238,238,1.0);
-  height: 80%;
+  height: 106%;
   position: absolute;
   top: 53px;
   width: 100%;
@@ -112,18 +117,18 @@
   margin-left: 2%;
   object-fit: cover;
   position: absolute;
-  top: 104px;
+  top: 107px;
   width: 95%;
 }
 .myaccount .line-8-C61RwL {
   background-color: transparent;
   flex-shrink: 1;
-  height: 1px;
+  height: 2px;
   margin-left: 4%;
   object-fit: cover;
   position: relative;
-  top: 42px;
   width: 94%;
+  margin-top: 13%;
 }
 .myaccount .my-account-management-4eduM0 {
   background-color: transparent;
@@ -145,7 +150,7 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'Oswald', Helvetica;
-  font-size: 35px;
+  font-size: 41px;
   font-style: normal;
   font-weight: bold;
   height: 49px;
@@ -169,17 +174,17 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'OswaldRegular-Regular', Helvetica;
-  font-size: 45px;
+  font-size: 44px;
   font-style: normal;
   font-weight: bold;
   height: auto;
   left: 9%;
   letter-spacing: 0.00px;
-  line-height: 45px;
+  line-height: 48px;
   position: absolute;
   text-align: left;
   text-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
-  top: 183px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -187,7 +192,7 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'SegoeUI-Regular', Helvetica;
-  font-size: 25px;
+  font-size: 37.5px;
   font-style: normal;
   font-weight: 400;
   height: auto;
@@ -253,49 +258,72 @@
 
 
 @media (min-width: 2000px) {
-  .myaccount .grey-back-4eduM0 {
-    height: 85%;
+  .myaccount .swapslogoimage-transparent-4eduM0 {
+    margin-top: -22%;
   }
   .myaccount .swaps-fx-user-guide-4eduM0 {
-    font-size: 31px;
+    font-size: 46.5px;
   }
   .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 90px;
-    line-height: 104px;
+    font-size: 150px;
+    line-height: 143px;
     top: 239px;
   }
   .myaccount .everything-you-se-our-services-4eduM0 {
-    top: 433px;
+    top: 540px;
+    width: 612px;
+    font-size: 51px !important;
   }
-  .myaccount .line-8-C61RwL {
-    top: 54px !important;
+  .myaccount .my-account-management-4eduM0 {
+    font-size: 125px !important;
   }
- 
+  .container-center-horizontal {
+    height: 3200px !important;
+  }
+  .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
+    font-size: 61px !important;
+  }
 
 }
 
 
 
 @media (max-width: 2000px) {
+  .myaccount .swapslogoimage-transparent-4eduM0 {
+    margin-top: -18%;
+  }
   .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 70px;
-    line-height: 78px;
+    font-size: 105px;
+    line-height: 96px;
     top: 190px;
   }
   .myaccount .everything-you-se-our-services-4eduM0 {
-    top: 345px;
+    top: 382px;
+    width: 581px;
+    font-size: 46.5px !important;
+  }
+  .myaccount .my-account-management-4eduM0 {
+    top: 135%;
+    font-size: 91.5px !important;
+  }
+  
+  .myaccount .line-8-C61RwL {
+    margin-top: 15%;
   }
 }
 
 
 
 @media (min-width: 1500px) {
-  .myaccount .my-account-management-4eduM0 {
-    font-size: 66px !important;
+  .myaccount .grey-back-4eduM0 {
+    height: 104%;
   }
-  .myaccount .line-8-C61RwL {
-    font-size: 44px;
-    top: 57px;
+  .myaccount .line-1-4eduM0 {
+    top: 110px;
+  }
+  .myaccount .my-account-management-4eduM0 {
+    font-size: 82px !important;
+    top: 129%;
   }
   .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
     font-size: 49px;
@@ -309,10 +337,6 @@
     font-size: 25px;
     top: 220px;
   }
-  .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
-    font-size: 70px;
-    top: 60px;
-  }
   .myaccount .you-can-manage-s-from-one-page-zUixHA {
     top: 193px;
     font-size: 39px;
@@ -322,72 +346,41 @@
     top: 279px;
     height: 123px;
   }
-  
+  .container-center-horizontal {
+    height: 2500px;
+  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 32px !important;
+  }
 }
 
 
 
 @media (max-width: 1500px) {
   .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 51px;
-    line-height: 60px;
+    font-size: 78px;
+    line-height: 71px;
     top: 190px;
   }
   .myaccount .everything-you-se-our-services-4eduM0 {
-    top: 309px;
-    font-size: 30px !important;
+    top: 338px;
+    font-size: 43px !important;
     width: 500px;
   }
   .myaccount .my-account-management-4eduM0 {
-    font-size: 39px;
+    font-size: 68px !important;
+  }
+  
+  .myaccount .line-8-C61RwL {
+    margin-top: 17%;
   }
 }
 
 
 
 @media (max-width: 1200px) {
-  .myaccount .swapslogoimage-transparent-4eduM0 {
-    margin-left: 17%;
-    width: 123%;
-    margin-top: -16%;
-  }
-  .myaccount .swaps-fx-user-guide-4eduM0 {
-    font-size: 20px;
-    top: 57px;
-  }
-  .myaccount .line-1-4eduM0 {
-    top: 85px;
-  }
-  .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 44px;
-    line-height: 48px;
-    top: 155px;
-  }
-  .myaccount .everything-you-se-our-services-4eduM0 {
-    top: 253px;
-    font-size: 28px !important;
-    width: 500px;
-    line-height: 32px;
-  }
-  .myaccount .group-8-zUixHA {
-    height: 73px;
-    font-size: 18px !important;
-    left: 38px;
-    top: 102px;
-  }
-  .myaccount .you-can-manage-s-from-one-page-zUixHA {
-    font-size: 18px;
-  }
-  .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
-    font-size: 32px;
-  }
-}
-
-
-
-@media (max-width: 900px) {
   .myaccount .grey-back-4eduM0 {
-    height: 75%;
+    height: 91%;
   }
   .myaccount .swapslogoimage-transparent-4eduM0 {
     margin-left: 6%;
@@ -395,27 +388,90 @@
     margin-top: -23%;
   }
   .myaccount .swaps-fx-user-guide-4eduM0 {
-    font-size: 20px;
+    font-size: 30px;
     top: 57px;
   }
+  .myaccount .line-1-4eduM0 {
+    top: 85px;
+  }
   .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 26px;
-    line-height: 30px;
-    top: 125px;
-    left: 11%;
+    font-size: 62px;
+    line-height: 61px;
+    top: 155px;
   }
   .myaccount .everything-you-se-our-services-4eduM0 {
-    top: 187px;
-    font-size: 16px !important;
-    width: 283px;
-    line-height: 19px;
-    left: 11%;
-  }
-  .myaccount .line-8-C61RwL {
-    top: 37px;
+    top: 278px;
+    font-size: 42px !important;
+    width: 500px;
+    line-height: 37px;
   }
   .myaccount .my-account-management-4eduM0 {
-    font-size: 28px;
+    font-size: 54px !important;
+    top: 119%;
+  }
+  
+  .myaccount .line-8-C61RwL {
+    margin-top: 15%;
+  }
+  .myaccount .group-8-zUixHA {
+    height: 73px;
+    left: 38px;
+    top: 117px;
+  }
+  .myaccount .you-can-manage-s-from-one-page-zUixHA {
+    font-size: 23px;
+  }
+  .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
+    font-size: 39px;
+  }
+  .container-center-horizontal {
+    height: 2000px;
+  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 24px !important;
+  }
+}
+
+
+
+@media (max-width: 900px) {
+  .myaccount .grey-back-4eduM0 {
+    height: 125%;
+  }
+  .myaccount .swapslogoimage-transparent-4eduM0 {
+    margin-left: 29%;
+    width: 104%;
+    margin-top: -11%;
+  }
+  .myaccount .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 41px;
+    line-height: 51px;
+    top: 155px;
+  }
+  .myaccount .everything-you-se-our-services-4eduM0 {
+    top: 256px;
+    font-size: 31px !important;
+    width: 378px;
+    line-height: 34px;
+  }
+  .myaccount .line-8-C61RwL {
+    margin-top: 29%;
+  }
+  .myaccount .my-account-management-4eduM0 {
+    font-size: 39px !important;
+    margin-top: 15%;
+  }
+  .container-center-horizontal {
+    height: 1500px;
+  }
+  .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
+    font-size: 30px;
+  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 20px !important;
+}
+  .myaccount .group-8-zUixHA {
+    top: 107px;
   }
 }
 
@@ -424,98 +480,100 @@
 @media (max-width: 600px) {
   .myaccount .grey-back-4eduM0 {
     top: 23px;
-    height: 85%;
+    height: 129%;
   }
-  .myaccount .swapslogoimage-transparent-4eduM0 {
-    margin-left: 6%;
-    width: 140%;
-    margin-top: -11%;
+  
+  .myaccount .swaps-fx-user-guide-4eduM0 {
+    font-size: 22.5px;
+    top: 48px;
   }
   .myaccount .line-1-4eduM0 {
-    top: 70px;
+    top: 74px;
   }
   .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 20px;
-    line-height: 22px;
-    top: 125px;
+    font-size: 32px;
+    line-height: 31px;
+    top: 109px;
   }
   .myaccount .everything-you-se-our-services-4eduM0 {
     top: 169px;
-    font-size: 12px !important;
-    width: 187px;
-    line-height: 18px;
+    font-size: 18px !important;
+    width: 205px;
+    line-height: 20px;
   }
   .myaccount .my-account-management-4eduM0 {
-    font-size: 17px;
-    margin-top: 0px;
+    font-size: 25px !important;
+    margin-top: 11%;
   }
   .myaccount .line-8-C61RwL {
-    margin-top: -11px;
+    margin-top: 26%;
   }
   .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
-    font-size: 15px;
-    top: -52px;
-  }
+    font-size: 19px;
+    top: -31px;
+}
   .myaccount .you-can-manage-s-from-one-page-zUixHA {
-    font-size: 9px;
-    top: -20px;
+    top: 4px;
     left: 10px;
   }
   .myaccount .group-8-zUixHA {
-    font-size: 9px !important;
-    top: 6px;
-    left: 22px;
-    height: 52px;
+    top: 39px;
+    height: 54px;
   }
-  .myaccount .swaps-fx-user-guide-4eduM0 {
-    font-size: 15px;
-    top: 48px;
-  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 15px !important;
+}
+
   .myaccount .image-12-C61RwL {
     margin-top: 66px;
   }
   .container-center-horizontal {
-    height: 800px;
+    height: 900px;
   }
 }
 
 
 
 @media (max-width: 400px) {
+  
+  .myaccount .grey-back-4eduM0 {
+    top: 23px;
+    height: 147%;
+  }
   .myaccount .swaps-fx-user-guide-4eduM0 {
-    font-size: 12px;
+    font-size: 18px;
     top: 48px;
   }
   .myaccount .line-1-4eduM0 {
-    top: 69px;
+    top: 72px;
   }
   .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 17px;
-    line-height: 21px;
-    top: 100px;
+    font-size: 25.5px;
+    line-height: 26px;
+    top: 116px;
   }
   .myaccount .everything-you-se-our-services-4eduM0 {
-    top: 146px;
-    font-size: 12px !important;
+    top: 169px;
+    font-size: 16.9px !important;
     width: 153px;
     line-height: 14px;
   }
   .myaccount .my-account-management-4eduM0 {
-    margin-top: 50px;
+    margin-top: 22%;
+    font-size: 23.5px !important;
   }
   .myaccount .line-8-C61RwL {
-    margin-top: 40px;
+    margin-top: 39%;
   }
   .myaccount .image-12-C61RwL {
     margin-top: 70px;
   }
   .myaccount .swapslogoimage-transparent-4eduM0 {
     margin-top: -6%;
-    width: 130%;
-    margin-left: 10%;
+    width: 1;
   }
   .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
-    font-size: 14px;
+    font-size: 16px;
   }
   .myaccount .you-can-manage-s-from-one-page-zUixHA {
     font-size: 11px;
@@ -524,23 +582,19 @@
     font-size: 10px !important;
     height: 49px;
   }
-  .myaccount .grey-back-4eduM0 {
-    top: 23px;
-    height: 113%;
-  }
+  .segoeui-regular-normal-nero-20px {
+    font-size: 12px !important;
+}
 }
 
 
 
 @media (max-width: 300px) {
   .myaccount .grey-back-4eduM0 {
-    height: 123%;
-  }
-  .myaccount .swapslogoimage-transparent-4eduM0 {
-    margin-top: -7%;
+    height: 144%;
   }
   .myaccount .line-8-C61RwL {
-    margin-top: 52px;
+    margin-top: 79px;
   }
   .myaccount .one-stop-view-o-nts-by-currency-zUixHA {
     font-size: 11px;
@@ -553,23 +607,14 @@
     height: 5px;
   }
   .myaccount .swaps-fx-user-guide-4eduM0 {
-    font-size: 10px;
+    font-size: 15px;
     top: 42px;
   }
   .myaccount .line-1-4eduM0 {
-    top: 59px;
-  }
-  .myaccount .swaps-fx-portal-user-guide-4eduM0 {
-    font-size: 14px;
-  }
-  .myaccount .everything-you-se-our-services-4eduM0 {
-    font-size: 9px !important;
-    width: 159px;
-    top: 143px;
+    top: 63px;
   }
   .myaccount .my-account-management-4eduM0 {
-    font-size: 14px;
-    margin-top: 63px;
+    top: 89%;
   }
   .myaccount .image-12-C61RwL {
     margin-top: 63px;
